
- Fixed a bug that could cause an unexpected exception to be thrown on
  plugin loading when a plugin property specified both a path and
  version.

- Fixed a bug in slice2cpp that generated invalid C++ code for C++11
  asynchronous invocations.
  
- Fixed a bug in slice2cpp that generated invalid C++ code when using
  "cpp:virtual" metadata.


Java Changes
============

- Fixed an SSL issue with anonymous ciphers on SLES 11 SP3 when using
  the IBM JDK.

- To simplify the use of optional values with the stream API, an
  optionalFormat() method is now generated in Helper classes when
  the --stream option is enabled.

- Fixed an assertion that would occur if a memory limit exception was
  raised while marshaling the response of an AMD callback.


C# Changes
==========

- To simplify the use of optional values with the stream API, an
  optionalFormat() method is now generated in Helper classes when
  the --stream option is enabled.

- Fixed an assertion that would occur if a memory limit exception was
  raised while marshaling the response of an AMD callback.

- Fixed a bug in slice2cs that caused incorrect code to be generated
  for a Slice structure that declares default values for its members.


PHP Changes
===========

- Fixed PHP namespace builds.


======================================================================
Changes since version 3.5b
======================================================================


General Changes
===============

- Fixed a bug where the CtrlCHandler destruction would cause a
  segfault on some recent Linux distributions with GCC 4.7.

- IPv6 is now enabled by default. A server listening on an endpoint
  with the wildcard address will therefore now accept connections from
  both IPv4 and IPv6 clients. It will also publish endpoints with IPv6
  addresses if some network interfaces are configured with IPv6
  addresses.

  Ice will still prefer IPv4 addresses when resolving hostnames from